# Canard

./: CMakeLists.txt  FanWake.f90  GridAerofoil.f90  Main3D.f90  MainVar3D.f90  Makefile  README.md  Subroutines3D.f90  Subroutineso.f90  canard.f90  input.gcbc  input.numerics  input.physics  install  makefile_ifort.dms  mo_diagnostics.f90  mo_domdcomp.f90  mo_gcbc.f90  mo_grid.f90  mo_gridgen.f90  mo_io.f90  mo_mpi.f90  mo_numerics.f90  mo_parameters.f90  mo_physics.f90  mo_sponge.f90  mo_timer.f90  mo_utils.f90  mo_vars.f90
contrib/: CMakeLists.txt  dcanard  dcanard.f90  mo_domdcomp.f90  mo_io.f90  mo_kind.f90  mo_mpi.f90  mo_parameters.f90  mo_utils.f90
input/parameters/: input.canard  input.domdcomp  input.domdcomp.aio  input.driver  input.gcbc  input.gridgen  input.main  input.numerics  input.physics  input.sponge
machine/: iridis5  levante  local
run/: exp.aio  exp.gpu  exp.toy  exp.toy.aio  exp.validation
src/: CMakeLists.txt  canard.f90  driver.f90  mo_aio.f90  mo_aio_driver.f90  mo_canard.f90  mo_canard_driver.f90  mo_domdcomp.f90  mo_gcbc.f90  mo_grid.f90  mo_gridgen.f90  mo_io.f90  mo_io_server.f90  mo_kind.f90  mo_model_ioserver_exchange.f90  mo_mpi.f90  mo_numerics.f90  mo_parameters.f90  mo_physics.f90  mo_sponge.f90  mo_utils.f90
